# arscontexta

./: .gitignore  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
generators/: ask-router.md  claude-md.md
hooks/: hooks.json
methodology/: PKM failure follows a predictable cycle.md  agent self-memory should be architecturally separate from user knowledge systems.md  agent session boundaries create natural automation checkpoints that human-operated systems lack.md  agent-cognition.md  agents are simultaneously methodology executors and subjects creating a unique trust asymmetry.md  automated detection is always safe because it only reads state while automated remediation risks content corruption.md  automation should be retired when its false positive rate exceeds its true positive rate or it catches zero issues.md  backward maintenance asks what would be different if written today.md  balance onboarding enforcement and questions to prevent premature complexity.md  build automatic memory through cognitive offloading and session handoffs.md  coherence maintains consistency despite inconsistent inputs.md  community detection algorithms can inform when MOCs should split or merge.md  complex systems evolve from simple working systems.md  compose multi-domain systems through separate templates and shared graph.md  (+61 more)
vault-template/: README.md  pyproject.toml
vault-template/src/arscontexta_vault/: __init__.py  cli.py  errors.py  markdown.py  output.py  paths.py  seed.py  validate.py
vault-template/tests/: conftest.py  test_runtime_commands.py
(+103 files in other folders)
