[project]
name = "arscontexta-vault"
version = "0.1.0"
description = "Vault-local deterministic tooling for Ars Contexta generated knowledge systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pyyaml>=6.0",
  "typer>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
arscontexta-vault = "arscontexta_vault.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "TID252"]
